# 2D-Engine

./: .gitignore  CMakeLists.txt  GameLoop.h  README.md  Renderer2D.cpp  SDLTest.cpp  SDLTest.h  imgui.ini  main.cpp
app/: OrthographicCameraController.cpp  OrthographicCameraController.h
backend/: SceneSerializer.cpp  SceneSerializer.h
backend/core/: Application.cpp  Application.h  Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h  Ref.h  SceneState.h  Timestep.h
backend/input/: InputManager.cpp  InputManager.h
backend/platform/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
backend/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  StbImage.cpp
backend/project/: ProjectManager.cpp  ProjectManager.h
backend/render/: Buffer.cpp  Buffer.h  GraphicsAPI.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.h  Math.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SceneViewportImage.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
backend/resource/: AssetRegistry.cpp  AssetRegistry.h  ResourceManager.cpp  ResourceManager.h  ResourcePathUtils.cpp  ResourcePathUtils.h
backend/script/: ScriptRuntime.cpp  ScriptRuntime.h
backend/window/: WindowManager.cpp  WindowManager.h
docs/: project_status_and_roadmap.md  renderer_milestone_summary.doc
frontend/src/: EditorState.h
frontend/src/editor/: EditorActions.h  EditorUI.cpp  EditorUI.h
frontend/src/editor/Panels/: AssetPanel.cpp  AssetPanel.h  ConsolePanel.cpp  ConsolePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ScenePanel.cpp  ScenePanel.h  test1.cpp
src/editor/Panels/: AssetPanel.h  ScenePanel.cpp  ScenePanel.h
